Fixed filtered notifications select row on mobile

--- a/TangerineUI-cherry.css
+++ b/TangerineUI-cherry.css
@@ -3665,6 +3665,14 @@ div[tabindex="-1"] + div[tabindex="-1"] > .status__wrapper > .status-reply.statu
         box-shadow: none;
         border-radius: 0;
     }
+    .app-body .column-header__select-row {
+        border-color: var(--color-lines);
+        background-color: var(--color-content-secondary-bg);
+        position: absolute;
+        inset-inline-start: -45px;
+        inset-inline-end: -55px;
+        border-width: 0 0 1px;
+    }
 }
 .app-body .column-header__collapsible-inner {
     border: 0;
@@ -5427,6 +5435,11 @@ div[tabindex="-1"] + div[tabindex="-1"] > .status__wrapper > .status-reply.statu
 }
 .app-body .notification-request {
     padding-top: 15px;
+}
+@media screen and (max-width:1174px) {
+    .app-body .notification-request {
+        margin-top: 60px;
+    }
 }
 .app-body .notification-group {
     padding: 16px 23px;
